update jvm run options